--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,9 @@ dependencies:
   cupertino_icons: ^1.0.8
   flutter_native_splash: ^2.4.3
   google_fonts: ^6.2.1
+  provider: ^6.1.2
+  dartz: ^0.10.1
+  http: ^1.2.2
 
 
 dev_dependencies:
